--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,8 @@
+version: "3.9"
+
 services:
-  backend:
-    build:
-      context: .
-      dockerfile: docker/backend.Dockerfile
-
-  websocket:
-    build:
-      context: .
-      dockerfile: docker/websocket.Dockerfile
-
-  nginx:
-    image: nginx:latest
+  app:
+    build: .
     ports:
-      - "80:80"
-    volumes:
-      - ./docker/nginx:/etc/nginx/conf.d
-    depends_on:
-      - backend
-      - websocket
+      - "80:8000"   
+    restart: unless-stopped
